# minerva.rs

./: .dockerignore  .env  .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile  Procfile  README.org  Rocket.toml  build-image.sh  docker-compose.yml  heroku_run.sh  log.txt  run-image.sh
doc/diagramas/: diagrama_conceitual.brM3  diagrama_logico.brM3
docker/minerva/: Cargo.docker.toml
docker/pgadmin/: Dockerfile  servers.json
migrations/2021-08-22-215453_cria_cliente/: down.sql  up.sql
migrations/2021-08-22-215913_cria_endereco/: down.sql  up.sql
migrations/2021-08-22-221024_cria_produto/: down.sql  up.sql
migrations/2021-08-29-143230_cria_usuario/: up.sql
migrations/2021-08-29-144204_cria_logdb/: down.sql  up.sql
migrations/2021-08-29-202604_modifica_usuario/: down.sql  up.sql
migrations/2021-09-07-021503_cria_mov_estoque/: down.sql  up.sql
migrations/2021-09-07-022401_cria_estoque/: down.sql  up.sql
migrations/2021-09-07-023622_modifica_mov_estoque/: down.sql  up.sql
migrations/2021-09-07-024619_modifica_estoque/: down.sql  up.sql
migrations/2021-09-07-024619_modifica_estoque/src/model/: schema.rs
src/: inpututils.rs  lib.rs  main.rs  util.rs
src/auth/: jwt.rs  mod.rs
src/bo/: clientes.rs  db.rs  mod.rs  redis.rs  twilio.rs  usuarios.rs  whatsapp.rs
src/bo/auth/: jwt.rs  mod.rs
src/controller/: clientes.rs  estoque.rs  log.rs  login.rs  mod.rs  produtos.rs  usuarios.rs
src/db/: mod.rs  postgres.rs  redis.rs
src/model/: cliente.rs  endereco.rs  enum_error.rs  estoque.rs  logdb.rs  login.rs  mod.rs  produto.rs  schema.rs  usuario.rs
src/model/src/model/: schema.rs
src/routes/: clientes.rs  estoque.rs  log.rs  login.rs  mod.rs  produtos.rs  respostas.rs  usuarios.rs
test/: insomnia.json
