[package]
name = "Minerva"
description = "API REST do projeto Minerva.rs."
authors = ["Lucas Vieira <lucasvieira@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.org"
version = "0.5.0"
edition = "2018"
default-run = "minerva"

[lib]
name = "minerva"
path = "src/lib.rs"

[[bin]]
name = "minerva"
path = "src/main.rs"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "extras", "numeric"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
serde  = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
diesel-enum = "0.0.4"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
